rhai/codegen/ui_tests/rhai_fn_rename_to_prop_getter.stderr
error: use attribute 'getter = "foo"' instead
  --> $DIR/rhai_fn_rename_to_prop_getter.rs:12:15
   |
12 |     #[rhai_fn(name = "get$foo")]
   |               ^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_rename_to_prop_getter.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
